--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://snackeach.cfsw6wkaskeq.us-east-2.rds.amazonaws.com:5432/postgres?user=postgres&password=Grup0mtobom!
+spring.datasource.username=postgres
+spring.datasource.password=Grup0mtobom!
 
 # Hibernate (JPA)
 spring.jpa.generate-ddl=true
