--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.open-in-view=false
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.cache.use_second_level_cache=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.jcache.JCacheRegionFactory
+
+# Cache
+spring.cache.jcache.config=classpath:ehcache.xml
